--- a/LethalCompanyTerminal/LethalCompanyTerminal.css
+++ b/LethalCompanyTerminal/LethalCompanyTerminal.css
@@ -1,8 +1,314 @@
-/* latin */
+/*
+ * @name Lethal Company terminal
+ * @author videosboy
+ * @description The terminal from Lethal Company comes to discord through this theme
+ * @version 0.0.1
+*/
+
 @font-face {
-    font-family: '3270';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/sharetechmono/v15/J7aHnp1uDWRBEqV98dVQztYldFcLowEF.woff2) format('opentype');
+    font-family: 'IBM 3270';
+    src: url(https://github.com/DaniVals/BetterDiscordThemes/blob/main/LethalCompanyTerminal/3270-Regular.ttf) format('opentype');
+}
+:root,.theme-dark,.theme-light{
+    
+    /* colores */
+    --highlight: #ffffff;
+
+    --background-clear: #282a26;
+    --background: #202320;
+    --background-dark: #130f0f;
+    
+    --text: #00dd00;
+    --text-semi: #00dd0077;
+    --text-hover: #ffffff;
+
+    --button-back: #00000000;
+    --button-text: #00ff00;
+    --button-border: #00ff00;
+
+    /* otros */
+    --font: 'IBM 3270', Regular;
+    /*
+    poner Quit en el esc
+    */
+}
+/*
+--------------------------FONDOS----------------------------
+*/
+.sidebarRegionScroller__1fa7e.thin_b1c063.scrollerBase_dc3aa9.fade_ba0fa0,
+.scroller__3d071.none__51a8f.scrollerBase_dc3aa9,
+.contentRegionScroller__86c79.contentRegionShownSidebar__610ed.auto_a48086.scrollerBase_dc3aa9,
+.container_d667ff,
+.container_ca50b9,
+.blobContainer__5ee50
+{
+    background-color: var(--background-dark) !important;
+}
+.profileCustomizationPreview_ccc6a9,
+.none__51a8f.scrollerBase_dc3aa9,
+.container__6968f,
+.container__9c82e,
+.input_d266e7,
+.inputWrapper__934f5,
+.title_b7d661.container__11d72.themed_b152d4,
+.sidebar_ded4b5,
+.privateChannels__93473,
+.scrollableContainer__33e06.themedBackground__6b1b6.webkit__8d35a,
+.privateChannels__93473 ul,
+.menu_dc52c6.flexible__7055b,
+.scroller_f0f183.thin_b1c063.scrollerBase_dc3aa9.fade_ba0fa0.customTheme_db4d28,
+.header__104ca,
+.members__9f47b.thin_b1c063.scrollerBase_dc3aa9.fade_ba0fa0.customTheme_db4d28,
+.container_b2ce9c,
+.button_d553e5,
+.accountProfileCard__22589
+{
+    background-color: var(--background);
+}
+.background_b61fcc,
+.fieldList_aab0de,
+.profileBadges__7a7cb.containerWithContent__7e98f.container__5bda1,
+.overlayBackground__86b78,
+.overlayBackground__86b78.body_aa2c19,
+.badgeList_ef4131.containerWithContent__7e98f.container__5bda1,
+.memberInner_a32223.layout_bb8e67,
+.searchBarComponent__22760,
+.modal__6a96b.root_a28985.small__05f7b.fullscreenOnMobile__96797.rootWithShadow__073a7,
+.chatContent__5dca8
+{
+    background-color: var(--background-clear);
+}
+#e
+{
+    color: var(--highlight) !important;
+    background-color: var(--highlight) !important;
+}
+.messagesWrapper_ea2b0b.group-spacing-16 ::-webkit-scrollbar-thumb,
+.pill__6b31b.wrapper__3670f span
+{
+    color: var(--text) !important;
+    background-color: var(--text) !important;
+}
+/* transparentar*/
+.circle__7dd22,
+.content_d67847
+{
+    background-color: #00000000;
+}
+.tooltipPointer_a79354
+{
+    color: #00000000;
+}
+/* poner cuadrados*/
+.bannerSVGWrapper__3e7b0 foreignObject, 
+.mask__1979f.svg_f5b652 foreignObject,
+.wrapper__3af0b foreignObject,
+.folder__17546,
+.userAvatar_c4f005.avatar_a56eee.avatarSmall__7dc81,
+.contents_f41bb2 img,
+.imageContainer__04362,
+.originalLink__94d5d,
+.imageWrapper_fd6587.imageZoom_ceab9d.clickable_dc48ac.lazyImgContainer__68fa8,
+.overlayBackground__86b78,
+.badgeList_ef4131.containerWithContent__7e98f.container__5bda1,
+.mask__1979f.svg_f5b652 rect
+{
+    border-radius: 0px;
+    mask: none;
+}
+/* algunas con reborde*/
+.menu_dc52c6,
+.memberInner_a32223.layout_bb8e67,
+.tooltip__01384.tooltipTop__5f583.tooltipPrimary_e5c00d,
+.buttonsInner_bca8fa.wrapper_c727b6,
+.modal__6a96b.root_a28985.small__05f7b.fullscreenOnMobile__96797.rootWithShadow__073a7,
+.userPopoutOuter_d739b2.userProfileOuter__46bb7.userProfileOuterUnthemed__48723.profileColors__2e2f0
+{
+    border-color: var(--button-border);
+    border-width: 1px;
+    border-radius: 0px;
+    border-style: solid;
+}
+/* aislado ya que si no, no funciona por algun motivo*/
+.userPopoutInner_f545a3.userProfileInner__8065b.userProfileInnerThemedNonPremium__3d0a6 
+{
+    background: var(--background);
+}
+/*
+----------------------TEXTOS------------------------------
+*/
+/* mensages sin el color forzado para los roles */
+.username_d30d99.desaturateUserColors_b72bd3.clickable_d866f1
+{
+    font-family: var(--font);
+    color: var(--text);
+    font-size: x-large;
+}
+.item__48dda.themed_b957e8,
+.info__40462,
+.overflowMenuIcon__91663,
+.defaultColor__37d78,
+.textarea_c5a7a3.inputDefault__80165.input_d266e7.scrollbarGhostHairline_c9a45f.scrollbar_d66c5e,
+.name__02dbd,
+.name__8d1ec,
+.linkButtonIcon__2f35b,
+.closeButton__8f1fd,
+.privateChannelRecipientsInviteButtonIcon__1e8fc.icon__4cb88,
+.label__73cb9,
+.icon_f09dde,
+.addButtonIcon_b776b3,
+.icon_eff5d4,
+.icon__1d60c,
+.icon__4cb88,
+.contents_fb6220 svg,
+.usernameFont__71dd5.username__73ce9,
+.actionIcon_d679b5,
+
+/* parte llamada */
+.text-xs-normal__56c35.subtext__8f869.channel_d7d412,
+.rtcConnectionStatus__40882.rtcConnectionQualityFine__471b6,
+.contents_fb6220,
+
+.theme-dark.layer_ec16dd.disabledPointerEvents_bb5546,
+.public-DraftStyleDefault-block.public-DraftStyleDefault-ltr,
+.button_d553e5,
+.tooltipContent__79a2d,
+.size14_b2af01.description__7af71.formText_e4d957
+{
+    font-family: var(--font);
+    color: var(--text) !important;
+    font-size: medium;
+}
+.userTagUsernameBase__75fb1,
+.markup_a7e664.messageContent__21e69,
+.markup_a7e664.editor__66464.slateTextArea__0661c.fontSize16Padding__48818,
+.headerText__94c22,
+.childWrapper__01b9c.acronym_cd4809,
+.defaultColor__87d87,
+.overflow__87fe8,
+.customStatus__3aa7f
+{
+    font-family: var(--font);
+    font-size: large;
+    color: var(--text);
+}
+.markup_a7e664.editor__66464.slateTextArea__0661c.fontSize16Padding__48818
+{
+    font-family: var(--font);
+    font-size: x-large;
+}
+.defaultMarginh1__902c1,
+.lineClamp1__0ec05.text-md-semibold__4cb23.name_c08dbc,
+.heading-lg-semibold_a200cd
+{
+    font-family: var(--font);
+    font-size: xx-large;
+    color: var(--text);
+}
+/* semi colorado */
+.activityText__84949,
+.subtext__623a0,
+.timestamp_cdbd93.timestampInline__470e0,
+.searchBarComponent__22760,
+.placeholder_e68c63.slateTextArea__0661c.fontSize16Padding__48818,
+.public-DraftEditorPlaceholder-inner,
+.topic__16ae3.expandable_ddf73d,
+.content_d67847,
+.text-sm-medium__1ba28
+{
+    font-family: var(--font);
+    color: var(--text-semi) !important;
+    font-size: medium;
+}
+/* mini encabezados configuracion */
+.defaultMarginh5__8514a,
+.fieldTitle__47b24, 
+.text-md-normal__4afad,
+.headerText__051c0,
+.membersGroup__85843.container_de798d span,
+.h5__884a2.eyebrow_b7df6b.title__317f4
+{
+    font-family: var(--font);
+    color: var(--text);
+    font-size: medium;
+    letter-spacing: 1px;
+}
+/* seleccionados */
+.containerDefault__3187b.selected__3b4cb .name__8d1ec.overflow__87fe8,
+.containerDefault__3187b.selected__3b4cb .icon_eff5d4
+{
+    color: var(--highlight) !important;
+}
+/*
+----------------------TABULADORES------------------------------
+*/
+/* tabuladores */
+.item__48dda.brand_ce3ecf
+{
+    font-family: var(--font);
+    font-size: large;
+    color: var(--text);
+}
+/* tabuladores con subrallado */
+.item__48dda.brand_ce3ecf.selected__5711d,
+.item__48dda.brand_ce3ecf:hover
+{
+    border-bottom-style: dashed;
+    border-bottom-color: var(--button-border) !important;
+}
+/*
+----------------------BOTONES------------------------------
+*/
+/* genericos */
+.sizeSmall__71a98.grow__4c8a4,
+.button_afdfd9.lookLink__93965.lowSaturationUnderline__95e71.colorPrimary__6ed40.sizeSmall__71a98.grow__4c8a4,
+.button_afdfd9.lookFilled__19298.colorBrand_b2253e.sizeLarge__9049d.grow__4c8a4
+{
+    font-family: var(--font);
+    color: var(--button-text);
+    font-size: medium;
+
+    background-color: var(--button-back);
+
+    border-color: var(--button-border);
+    border-radius: 0px;
+    border-width: 1px;
+    border-style: solid;
+}
+/* cerrar configuracion */
+.keybind__57645, 
+.closeButton__34341
+{
+    font-family: var(--font);
+    color: var(--button-text);
+    
+    font-size: large;
+
+    border-radius: 0px;
+    border-width: 1px;
+}
+.closeButton__34341:hover
+{
+    color: var(--text-hover);
+
+    background-color: #00000000;
+}
+/*
+--------------------------MOVER----------------------------
+*/
+.sidebar__9e3e2 /* lateral configuracion */
+{
+    width: 30%;
+}
+/*
+--------------------------IMAGENES----------------------------
+*/
+/* desaparecer */
+.flex_f5fbb7.horizontal__992f6.justifyStart__42744.alignCenter__84269.noWrap__5c413{
+    opacity: 0;
+}
+/* colorear */
+.icon__8f621
+{
+    color: var(--text);
 }
