--- a/LethalCompanyTerminal/LethalCompanyTerminal.css
+++ b/LethalCompanyTerminal/LethalCompanyTerminal.css
@@ -143,9 +143,7 @@
     background: var(--background);
 }
 /* botones llamada */
-.controlButton_ab2899.centerButton__3205b.colorable_c84c4c,
-.controlButton_ab2899.contextMenuContainer_fc4df6 .svg__7900e,
-.controlButton_ab2899.contextMenuContainer_fc4df6 .svg__7900e foreignObject
+.controlButton_ab2899.centerButton__3205b.colorable_c84c4c
 {
     background-color: var(--button-back);
     
